# sobolev_training_sheep_data

./: .gitignore  pyproject.toml
report/: status_report.md
src/custom_sobolev_training/: complex_differences.py  data_gen.py  experiment.py  outlier_reject.py  training.py
src/custom_sobolev_training/data_generation/: prepare_data.py  preprocessing.py  signal_api.py
test/: test_preprocessing.py
visualizations/: gradients_vis.ipynb
